--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cls && nodemon server.js"
+    "dev": "cls && nodemon server.js",
+    "studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "Matheus Gomes Leitão",
   "license": "MIT",
   "description": "Resolução dos exercícios do Prisma",
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "^6.17.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
-    "prisma": "^6.16.3"
+    "prisma": "^6.17.1"
   }
 }
