--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cls && nodemon server.js",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "seed": "npx prisma db seed"
   },
   "keywords": [],
   "author": "Matheus Gomes Leitão",
