--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "keywords": [],
+  "keywords": ["backend"],
   "author": "Matheus Gomes Leitão",
   "license": "MIT",
   "description": "Resolução dos exercícios do Prisma",
